// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Connection should be able to call a procedure and output the stdout 1`] = `
"- 
  - 
    ROWNUM:           1
    MACRO:            DSN6SYSP
    PARAMETER:        AUDITST
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    AUDIT TRACE
    INSTALL_LOCATION: 1
    VALUE:            00000000000000000000000000000000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           2
    MACRO:            DSN6SYSP
    PARAMETER:        CONDBAT
    INSTALL_PANEL:    DSNTIPE
    INSTALL_FIELD:    MAX REMOTE CONNECTED
    INSTALL_LOCATION: 4
    VALUE:            0000010000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           3
    MACRO:            DSN6SYSP
    PARAMETER:        CTHREAD
    INSTALL_PANEL:    DSNTIPE
    INSTALL_FIELD:    MAX USERS
    INSTALL_LOCATION: 2
    VALUE:            00200
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           4
    MACRO:            DSN6SYSP
    PARAMETER:        DLDFREQ
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    LEVELID UPDATE FREQUENCY
    INSTALL_LOCATION: 10
    VALUE:            ON
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           5
    MACRO:            DSN6SYSP
    PARAMETER:        PCLOSEN
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    RO SWITCH CHKPTS
    INSTALL_LOCATION: 8
    VALUE:            00010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           6
    MACRO:            DSN6SYSP
    PARAMETER:        IDBACK
    INSTALL_PANEL:    DSNTIPE
    INSTALL_FIELD:    MAX BATCH CONNECT
    INSTALL_LOCATION: 6
    VALUE:            00050
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           7
    MACRO:            DSN6SYSP
    PARAMETER:        IDFORE
    INSTALL_PANEL:    DSNTIPE
    INSTALL_FIELD:    MAX TSO CONNECT
    INSTALL_LOCATION: 5
    VALUE:            00050
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           8
    MACRO:            DSN6SYSP
    PARAMETER:        CHKTYPE
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    CHECKPOINT TYPE
    INSTALL_LOCATION: 1
    VALUE:            SINGLE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           9
    MACRO:            DSN6SYSP
    PARAMETER:        CHKFREQ
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    RECORDS\\\\CHECKPOINT
    INSTALL_LOCATION: 2
    VALUE:            0000000005
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           10
    MACRO:            DSN6SYSP
    PARAMETER:        CHKLOGR
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    RECORDS\\\\CHECKPOINT
    INSTALL_LOCATION: 2
    VALUE:            NOTUSED
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           11
    MACRO:            DSN6SYSP
    PARAMETER:        CHKMINS
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    MINUTES\\\\CHECKPOINT
    INSTALL_LOCATION: 3
    VALUE:            NOTUSED
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           12
    MACRO:            DSN6SYSP
    PARAMETER:        MON
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    MONITOR TRACE
    INSTALL_LOCATION: 10
    VALUE:            00000000000000000000000000000000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           13
    MACRO:            DSN6SYSP
    PARAMETER:        MONSIZE
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    MONITOR SIZE
    INSTALL_LOCATION: 11
    VALUE:            0001048576
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           14
    MACRO:            DSN6SYSP
    PARAMETER:        SYNCVAL
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    STATISTICS SYNC
    INSTALL_LOCATION: 8
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           15
    MACRO:            DSN6SYSP
    PARAMETER:        RLFAUTH
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    RESOURCE AUTHID
    INSTALL_LOCATION: 11
    VALUE:            SYSIBM
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           16
    MACRO:            DSN6SYSP
    PARAMETER:        RLF
    INSTALL_PANEL:    DSNTIPO4
    INSTALL_FIELD:    RLF AUTO START
    INSTALL_LOCATION: 1
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           17
    MACRO:            DSN6SYSP
    PARAMETER:        RLFENABLE
    INSTALL_PANEL:    DSNTIPO4
    INSTALL_FIELD:    RLF SCOPE
    INSTALL_LOCATION: 2
    VALUE:            DYNAMIC
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           18
    MACRO:            DSN6SYSP
    PARAMETER:        RLFTBL
    INSTALL_PANEL:    DSNTIPO4
    INSTALL_FIELD:    RLST NAME SUFFIX
    INSTALL_LOCATION: 3
    VALUE:            01
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           19
    MACRO:            DSN6SYSP
    PARAMETER:        RLFERR
    INSTALL_PANEL:    DSNTIPO4
    INSTALL_FIELD:    DYNAMIC SQL
    INSTALL_LOCATION: 4
    VALUE:            NOLIMIT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           20
    MACRO:            DSN6SYSP
    PARAMETER:        RLFERRSTC
    INSTALL_PANEL:    DSNTIPO4
    INSTALL_FIELD:    STATIC SQL
    INSTALL_LOCATION: 5
    VALUE:            NOLIMIT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           21
    MACRO:            DSN6SYSP
    PARAMETER:        MAXDBAT
    INSTALL_PANEL:    DSNTIPE
    INSTALL_FIELD:    MAX REMOTE ACTIVE
    INSTALL_LOCATION: 3
    VALUE:            00200
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           22
    MACRO:            DSN6SYSP
    PARAMETER:        DSSTIME
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    DATASET STATS TIME
    INSTALL_LOCATION: 9
    VALUE:            00005
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           23
    MACRO:            DSN6SYSP
    PARAMETER:        EXTSEC
    INSTALL_PANEL:    DSNTIP5
    INSTALL_FIELD:    EXTENDED SECURITY
    INSTALL_LOCATION: 4
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           24
    MACRO:            DSN6SYSP
    PARAMETER:        SMFACCT
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    SMF ACCOUNTING
    INSTALL_LOCATION: 4
    VALUE:            11100011000000000000000000000000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           25
    MACRO:            DSN6SYSP
    PARAMETER:        SMFSTAT
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    SMF STATISTICS
    INSTALL_LOCATION: 5
    VALUE:            10111100000000000000000000000000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           26
    MACRO:            DSN6SYSP
    PARAMETER:        SMFCOMP
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    COMPRESS SMF RECS
    INSTALL_LOCATION: 15
    VALUE:            OFF
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           27
    MACRO:            DSN6SYSP
    PARAMETER:        DEL_CFSTRUCTS_ON_RESTART
    INSTALL_PANEL:    DSNTIPK
    INSTALL_FIELD:    DEL CF STRUCTS
    INSTALL_LOCATION: 7
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           28
    MACRO:            DSN6SYSP
    PARAMETER:        ROUTCDE
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    WTO ROUTE CODES
    INSTALL_LOCATION: 1
    VALUE:            1000000000000000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           29
    MACRO:            DSN6SYSP
    PARAMETER:        STORMXAB
    INSTALL_PANEL:    DSNTIPX
    INSTALL_FIELD:    MAX ABEND COUNT
    INSTALL_LOCATION: 3
    VALUE:            00000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           30
    MACRO:            DSN6SYSP
    PARAMETER:        STORTIME
    INSTALL_PANEL:    DSNTIPX
    INSTALL_FIELD:    TIMEOUT VALUE
    INSTALL_LOCATION: 4
    VALUE:            00180
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           31
    MACRO:            DSN6SYSP
    PARAMETER:        STATIME_MAIN
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    MAIN STATS TIME
    INSTALL_LOCATION: 6
    VALUE:            00060
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           32
    MACRO:            DSN6SYSP
    PARAMETER:        STATIME
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    STATISTICS TIME
    INSTALL_LOCATION: 7
    VALUE:            00001
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           33
    MACRO:            DSN6SYSP
    PARAMETER:        TRACLOC
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            00016
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           34
    MACRO:            DSN6SYSP
    PARAMETER:        PCLOSET
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    RO SWITCH TIME
    INSTALL_LOCATION: 9
    VALUE:            00010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           35
    MACRO:            DSN6SYSP
    PARAMETER:        TRACSTR
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    TRACE AUTO START
    INSTALL_LOCATION: 2
    VALUE:            00000000000000000000000000000000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           36
    MACRO:            DSN6SYSP
    PARAMETER:        TRACTBL
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    TRACE SIZE
    INSTALL_LOCATION: 3
    VALUE:            00016
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           37
    MACRO:            DSN6SYSP
    PARAMETER:        URCHKTH
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    UR CHECK FREQ
    INSTALL_LOCATION: 4
    VALUE:            005
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           38
    MACRO:            DSN6SYSP
    PARAMETER:        WLMENV
    INSTALL_PANEL:    DSNTIPX
    INSTALL_FIELD:    WLM ENVIRONMENT
    INSTALL_LOCATION: 5
    VALUE:            DBC1ENV
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           39
    MACRO:            DSN6SYSP
    PARAMETER:        PTASKROL
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           40
    MACRO:            DSN6SYSP
    PARAMETER:        EXTRAREQ
    INSTALL_PANEL:    DSNTIP5
    INSTALL_FIELD:    EXTRA BLOCKS REQ
    INSTALL_LOCATION: 6
    VALUE:            00100
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           41
    MACRO:            DSN6SYSP
    PARAMETER:        EXTRASRV
    INSTALL_PANEL:    DSNTIP5
    INSTALL_FIELD:    EXTRA BLOCKS SRV
    INSTALL_LOCATION: 7
    VALUE:            00100
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           42
    MACRO:            DSN6SYSP
    PARAMETER:        TBSBPOOL
    INSTALL_PANEL:    DSNTIP2
    INSTALL_FIELD:    DEFAULT BUFFER POOL FOR USER DATA
    INSTALL_LOCATION: 31
    VALUE:            BP0
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           43
    MACRO:            DSN6SYSP
    PARAMETER:        IDXBPOOL
    INSTALL_PANEL:    DSNTIP2
    INSTALL_FIELD:    DEFAULT BUFFER POOL FOR USER INDEXES
    INSTALL_LOCATION: 37
    VALUE:            BP0
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           44
    MACRO:            DSN6SYSP
    PARAMETER:        LBACKOUT
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    LIMIT BACKOUT
    INSTALL_LOCATION: 6
    VALUE:            AUTO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           45
    MACRO:            DSN6SYSP
    PARAMETER:        BACKODUR
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    BACKOUT DURATION
    INSTALL_LOCATION: 7
    VALUE:            005
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           46
    MACRO:            DSN6SYSP
    PARAMETER:        URLGWTH
    INSTALL_PANEL:    DSNTIPL1
    INSTALL_FIELD:    UR LOG WRITE CHECK
    INSTALL_LOCATION: 5
    VALUE:            0000000010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           47
    MACRO:            DSN6SYSP
    PARAMETER:        UIFCIDS
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    UNICODE IFCIDS
    INSTALL_LOCATION: 12
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           48
    MACRO:            DSN6SYSP
    PARAMETER:        ACCUMACC
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    DDF-RRSAF ACCUM
    INSTALL_LOCATION: 13
    VALUE:            00010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           49
    MACRO:            DSN6SYSP
    PARAMETER:        ACCUMUID
    INSTALL_PANEL:    DSNTIPN
    INSTALL_FIELD:    AGGREGATION FIELDS
    INSTALL_LOCATION: 14
    VALUE:            00000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           50
    MACRO:            DSN6SYSP
    PARAMETER:        TSQTY
    INSTALL_PANEL:    DSNTIP7
    INSTALL_FIELD:    TABLE SPACE ALLOCATION
    INSTALL_LOCATION: 2
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           51
    MACRO:            DSN6SYSP
    PARAMETER:        IXQTY
    INSTALL_PANEL:    DSNTIP7
    INSTALL_FIELD:    INDEX SPACE ALLOCATION
    INSTALL_LOCATION: 3
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           52
    MACRO:            DSN6SYSP
    PARAMETER:        DSVCI
    INSTALL_PANEL:    DSNTIP7
    INSTALL_FIELD:    VARY DS CONTROL INTERVAL
    INSTALL_LOCATION: 1
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           53
    MACRO:            DSN6SYSP
    PARAMETER:        MGEXTSZ
    INSTALL_PANEL:    DSNTIP7
    INSTALL_FIELD:    OPTIMIZE EXTENT SIZING
    INSTALL_LOCATION: 4
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           54
    MACRO:            DSN6SYSP
    PARAMETER:        SMF89
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           55
    MACRO:            DSN6SYSP
    PARAMETER:        OTC_LICENSE
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NOT_USED
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           56
    MACRO:            DSN6SYSP
    PARAMETER:        MAXOFILR
    INSTALL_PANEL:    DSNTIPE
    INSTALL_FIELD:    MAX OPEN FILE REFS
    INSTALL_LOCATION: 8
    VALUE:            0000000100
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           57
    MACRO:            DSN6SYSP
    PARAMETER:        TBSBP8K
    INSTALL_PANEL:    DSNTIP2
    INSTALL_FIELD:    DEFAULT  8-KB BUFFER POOL FOR USER DATA
    INSTALL_LOCATION: 32
    VALUE:            BP8K0
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           58
    MACRO:            DSN6SYSP
    PARAMETER:        TBSBP16K
    INSTALL_PANEL:    DSNTIP2
    INSTALL_FIELD:    DEFAULT 16-KB BUFFER POOL FOR USER DATA
    INSTALL_LOCATION: 33
    VALUE:            BP16K0
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           59
    MACRO:            DSN6SYSP
    PARAMETER:        TBSBP32K
    INSTALL_PANEL:    DSNTIP2
    INSTALL_FIELD:    DEFAULT 32-KB BUFFER POOL FOR USER DATA
    INSTALL_LOCATION: 34
    VALUE:            BP32K
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           60
    MACRO:            DSN6SYSP
    PARAMETER:        TBSBPLOB
    INSTALL_PANEL:    DSNTIP2
    INSTALL_FIELD:    DEFAULT BUFFER POOL FOR LOB DATA
    INSTALL_LOCATION: 35
    VALUE:            BP0
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           61
    MACRO:            DSN6SYSP
    PARAMETER:        TBSBPXML
    INSTALL_PANEL:    DSNTIP2
    INSTALL_FIELD:    DEFAULT BUFFER POOL FOR XML DATA
    INSTALL_LOCATION: 36
    VALUE:            BP16K0
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           62
    MACRO:            DSN6SYSP
    PARAMETER:        IMPDSDEF
    INSTALL_PANEL:    DSNTIP72
    INSTALL_FIELD:    DEFINE DATA SETS
    INSTALL_LOCATION: 1
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           63
    MACRO:            DSN6SYSP
    PARAMETER:        IMPTSCMP
    INSTALL_PANEL:    DSNTIP72
    INSTALL_FIELD:    USE DATA COMPRESSION
    INSTALL_LOCATION: 2
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           64
    MACRO:            DSN6SYSP
    PARAMETER:        IMPTKMOD
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           65
    MACRO:            DSN6SYSP
    PARAMETER:        IMPDSSIZE
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            00004
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           66
    MACRO:            DSN6SYSP
    PARAMETER:        DPSEGSZ
    INSTALL_PANEL:    DSNTIP71
    INSTALL_FIELD:    DEFAULT PARTITION SEGSIZE
    INSTALL_LOCATION: 1
    VALUE:            00032
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           67
    MACRO:            DSN6SYSP
    PARAMETER:        LOB_INLINE_LENGTH
    INSTALL_PANEL:    DSNTIPD
    INSTALL_FIELD:    LOB INLINE LENGTH
    INSTALL_LOCATION: 13
    VALUE:            00000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           68
    MACRO:            DSN6SYSP
    PARAMETER:        DSNZPARM
    INSTALL_PANEL:    DSNTIPO3
    INSTALL_FIELD:    PARAMETER MODULE
    INSTALL_LOCATION: 1
    VALUE:            DBC1PARM
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           69
    MACRO:            DSN6SYSP
    PARAMETER:        ACCESS_CNTL_MODULE
    INSTALL_PANEL:    DSNTIPO3
    INSTALL_FIELD:    ACCESS CONTROL
    INSTALL_LOCATION: 3
    VALUE:            DSNX@XAC
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           70
    MACRO:            DSN6SYSP
    PARAMETER:        IDAUTH_MODULE
    INSTALL_PANEL:    DSNTIPO3
    INSTALL_FIELD:    IDENTIFY\\\\AUTH
    INSTALL_LOCATION: 4
    VALUE:            DSN3@ATH
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           71
    MACRO:            DSN6SYSP
    PARAMETER:        SIGNON_MODULE
    INSTALL_PANEL:    DSNTIPO3
    INSTALL_FIELD:    SIGNON
    INSTALL_LOCATION: 5
    VALUE:            DSN3@SGN
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           72
    MACRO:            DSN6SYSP
    PARAMETER:        XML_RANDOMIZE_DOCID
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    RANDOMIZE XML DOCID
    INSTALL_LOCATION: 10
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           73
    MACRO:            DSN6SYSP
    PARAMETER:        PROFILE_AUTOSTART
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    PROFILE AUTOSTART
    INSTALL_LOCATION: 10
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           74
    MACRO:            DSN6LOGP
    PARAMETER:        TWOACTV
    INSTALL_PANEL:    DSNTIPH
    INSTALL_FIELD:    NUMBER OF COPIES
    INSTALL_LOCATION: 3
    VALUE:            2
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           75
    MACRO:            DSN6LOGP
    PARAMETER:        OFFLOAD
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           76
    MACRO:            DSN6LOGP
    PARAMETER:        TWOBSDS
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            2
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           77
    MACRO:            DSN6LOGP
    PARAMETER:        TWOARCH
    INSTALL_PANEL:    DSNTIPH
    INSTALL_FIELD:    NUMBER OF COPIES
    INSTALL_LOCATION: 6
    VALUE:            1
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           78
    MACRO:            DSN6LOGP
    PARAMETER:        MAXARCH
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    RECORDING MAX
    INSTALL_LOCATION: 8
    VALUE:            0000010000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           79
    MACRO:            DSN6LOGP
    PARAMETER:        DEALLCT
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    DEALLOC PERIOD
    INSTALL_LOCATION: 7
    VALUE:            (0000,00)
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           80
    MACRO:            DSN6LOGP
    PARAMETER:        MAXRTU
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    READ TAPE UNITS
    INSTALL_LOCATION: 6
    VALUE:            00002
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           81
    MACRO:            DSN6LOGP
    PARAMETER:        OUTBUFF
    INSTALL_PANEL:    DSNTIPL
    INSTALL_FIELD:    OUTPUT BUFFER
    INSTALL_LOCATION: 2
    VALUE:            0000004000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           82
    MACRO:            DSN6LOGP
    PARAMETER:        ARC2FRST
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    READ COPY2 ARCHIVE
    INSTALL_LOCATION: 9
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           83
    MACRO:            DSN6LOGP
    PARAMETER:        REMOTE_COPY_SW_ACCEL
    INSTALL_PANEL:    DSNTIPL
    INSTALL_FIELD:    REMOTE COPY SW ACCESS
    INSTALL_LOCATION: 5
    VALUE:            DISABLE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           84
    MACRO:            DSN6LOGP
    PARAMETER:        CDDS_MODE
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NONE
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           85
    MACRO:            DSN6LOGP
    PARAMETER:        CDDS_PREFIX
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           86
    MACRO:            DSN6ARVP
    PARAMETER:        BLKSIZE
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    BLOCK SIZE
    INSTALL_LOCATION: 5
    VALUE:            0000024576
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           87
    MACRO:            DSN6ARVP
    PARAMETER:        PROTECT
    INSTALL_PANEL:    DSNTIPP
    INSTALL_FIELD:    ARCHIVE LOG RACF
    INSTALL_LOCATION: 1
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           88
    MACRO:            DSN6ARVP
    PARAMETER:        ARCWTOR
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    WRITE TO OPER
    INSTALL_LOCATION: 9
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           89
    MACRO:            DSN6ARVP
    PARAMETER:        COMPACT
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    COMPACT DATA
    INSTALL_LOCATION: 13
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           90
    MACRO:            DSN6ARVP
    PARAMETER:        TSTAMP
    INSTALL_PANEL:    DSNTIPH
    INSTALL_FIELD:    TIMESTAMP ARCHIVES
    INSTALL_LOCATION: 9
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           91
    MACRO:            DSN6ARVP
    PARAMETER:        QUIESCE
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    QUIESCE PERIOD
    INSTALL_LOCATION: 12
    VALUE:            00005
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           92
    MACRO:            DSN6ARVP
    PARAMETER:        ARCRETN
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    RETENTION PERIOD
    INSTALL_LOCATION: 11
    VALUE:            00001
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           93
    MACRO:            DSN6ARVP
    PARAMETER:        ARCPFX1
    INSTALL_PANEL:    DSNTIPH
    INSTALL_FIELD:    ARCH LOG 1 PREFIX
    INSTALL_LOCATION: 7
    VALUE:            DSN121.ARCHLOG1
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           94
    MACRO:            DSN6ARVP
    PARAMETER:        ARCPFX2
    INSTALL_PANEL:    DSNTIPH
    INSTALL_FIELD:    ARCH LOG 2 PREFIX
    INSTALL_LOCATION: 8
    VALUE:            DSN121.ARCHLOG2
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           95
    MACRO:            DSN6ARVP
    PARAMETER:        PRIQTY
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    PRIMARY QUANTITY
    INSTALL_LOCATION: 1
    VALUE:            0000000125
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           96
    MACRO:            DSN6ARVP
    PARAMETER:        SECQTY
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    SECONDARY QTY
    INSTALL_LOCATION: 2
    VALUE:            0000000015
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           97
    MACRO:            DSN6ARVP
    PARAMETER:        UNIT
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    DEVICE TYPE 1
    INSTALL_LOCATION: 3
    VALUE:            SYSALLDA
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           98
    MACRO:            DSN6ARVP
    PARAMETER:        UNIT2
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    DEVICE TYPE 2
    INSTALL_LOCATION: 4
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           99
    MACRO:            DSN6ARVP
    PARAMETER:        SVOLARC
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    SINGLE VOLUME
    INSTALL_LOCATION: 14
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           100
    MACRO:            DSN6ARVP
    PARAMETER:        ARCWRTC
    INSTALL_PANEL:    DSNTIPA
    INSTALL_FIELD:    WTOR ROUTE CODE
    INSTALL_LOCATION: 10
    VALUE:            1011000000000000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           101
    MACRO:            DSN6SPRM
    PARAMETER:        ABIND
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    AUTO BIND
    INSTALL_LOCATION: 4
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           102
    MACRO:            DSN6SPRM
    PARAMETER:        SYSADM2
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    SYSTEM ADMIN 2
    INSTALL_LOCATION: 2
    VALUE:            ROOT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           103
    MACRO:            DSN6SPRM
    PARAMETER:        AUTHCACH
    INSTALL_PANEL:    DSNTIPP
    INSTALL_FIELD:    PLAN AUTH CACHE
    INSTALL_LOCATION: 3
    VALUE:            03072
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           104
    MACRO:            DSN6SPRM
    PARAMETER:        AUTH
    INSTALL_PANEL:    DSNTIPP
    INSTALL_FIELD:    USE PROTECTION
    INSTALL_LOCATION: 2
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           105
    MACRO:            DSN6SPRM
    PARAMETER:        BMPTOUT
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    IMS BMP TIMEOUT
    INSTALL_LOCATION: 10
    VALUE:            00004
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           106
    MACRO:            DSN6SPRM
    PARAMETER:        BINDNV
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    BIND NEW PACKAGE
    INSTALL_LOCATION: 12
    VALUE:            BINDADD
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           107
    MACRO:            DSN6SPRM
    PARAMETER:        CDSSRDEF
    INSTALL_PANEL:    DSNTIP81
    INSTALL_FIELD:    CURRENT DEGREE
    INSTALL_LOCATION: 1
    VALUE:            1
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           108
    MACRO:            DSN6SPRM
    PARAMETER:        DBCHK
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           109
    MACRO:            DSN6SPRM
    PARAMETER:        DEFLTID
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    UNKNOWN AUTHID
    INSTALL_LOCATION: 10
    VALUE:            SYSADM
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           110
    MACRO:            DSN6SPRM
    PARAMETER:        CHGDC AND EDPROP
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    DPROP SUPPORT
    INSTALL_LOCATION: 6
    VALUE:            1
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           111
    MACRO:            DSN6SPRM
    PARAMETER:        DECDIV3
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    MINIMUM DIVIDE SCALE
    INSTALL_LOCATION: 1
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           112
    MACRO:            DSN6SPRM
    PARAMETER:        DLITOUT
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    DLI BATCH TIMEOUT
    INSTALL_LOCATION: 11
    VALUE:            00006
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           113
    MACRO:            DSN6SPRM
    PARAMETER:        DSMAX
    INSTALL_PANEL:    DSNTIPC
    INSTALL_FIELD:    MAXIMUM OPEN DATA SETS
    INSTALL_LOCATION: 1
    VALUE:            0000020000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           114
    MACRO:            DSN6SPRM
    PARAMETER:        RECALLD
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    RECALL DELAY
    INSTALL_LOCATION: 3
    VALUE:            00120
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           115
    MACRO:            DSN6SPRM
    PARAMETER:        RECALL
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    RECALL DATA BASE
    INSTALL_LOCATION: 2
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           116
    MACRO:            DSN6SPRM
    PARAMETER:        IRLMAUT
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    AUTO START
    INSTALL_LOCATION: 4
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           117
    MACRO:            DSN6SPRM
    PARAMETER:        ABEXP
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    EXPLAIN PROCESSING
    INSTALL_LOCATION: 5
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           118
    MACRO:            DSN6SPRM
    PARAMETER:        IRLMPRC
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    PROC NAME
    INSTALL_LOCATION: 5
    VALUE:            DBC1IRLM
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           119
    MACRO:            DSN6SPRM
    PARAMETER:        IRLMSID
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    SUBSYSTEM NAME
    INSTALL_LOCATION: 2
    VALUE:            IRC1
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           120
    MACRO:            DSN6SPRM
    PARAMETER:        IRLMSWT
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    TIME TO AUTO START
    INSTALL_LOCATION: 6
    VALUE:            0000000120
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           121
    MACRO:            DSN6SPRM
    PARAMETER:        NUMLKTS
    INSTALL_PANEL:    DSNTIPJ
    INSTALL_FIELD:    LOCKS PER TABLE(SPACE)
    INSTALL_LOCATION: 3
    VALUE:            0000002000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           122
    MACRO:            DSN6SPRM
    PARAMETER:        NUMLKUS
    INSTALL_PANEL:    DSNTIPJ
    INSTALL_FIELD:    LOCKS PER USER
    INSTALL_LOCATION: 4
    VALUE:            0000010000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           123
    MACRO:            DSN6SPRM
    PARAMETER:        RRULOCK
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    U LOCK FOR RR OR RS
    INSTALL_LOCATION: 7
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           124
    MACRO:            DSN6SPRM
    PARAMETER:        DESCSTAT
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    DESCRIBE FOR STATIC
    INSTALL_LOCATION: 4
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           125
    MACRO:            DSN6SPRM
    PARAMETER:        CACHEDYN
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    CACHE DYNAMIC SQL
    INSTALL_LOCATION: 1
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           126
    MACRO:            DSN6SPRM
    PARAMETER:        RETLWAIT
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    RETAINED LOCK TIMEOUT
    INSTALL_LOCATION: 12
    VALUE:            00000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           127
    MACRO:            DSN6SPRM
    PARAMETER:        CACHERAC
    INSTALL_PANEL:    DSNTIPP
    INSTALL_FIELD:    ROUTINE AUTH CACHE
    INSTALL_LOCATION: 5
    VALUE:            0005242880
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           128
    MACRO:            DSN6SPRM
    PARAMETER:        MAXKEEPD
    INSTALL_PANEL:    DSNTIPE
    INSTALL_FIELD:    MAX KEPT DYN STMTS
    INSTALL_LOCATION: 7
    VALUE:            0000005000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           129
    MACRO:            DSN6SPRM
    PARAMETER:        PROTOFF
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           130
    MACRO:            DSN6SPRM
    PARAMETER:        AEXITLIM
    INSTALL_PANEL:    DSNTIPP
    INSTALL_FIELD:    AUTH EXIT LIMIT
    INSTALL_LOCATION: 6
    VALUE:            00010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           131
    MACRO:            DSN6SPRM
    PARAMETER:        SYSOPR1
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    SYSTEM OPERATOR 1
    INSTALL_LOCATION: 3
    VALUE:            IBMUSER
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           132
    MACRO:            DSN6SPRM
    PARAMETER:        SYSOPR2
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    SYSTEM OPERATOR 2
    INSTALL_LOCATION: 4
    VALUE:            IBMUSER
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           133
    MACRO:            DSN6SPRM
    PARAMETER:        CACHEPAC
    INSTALL_PANEL:    DSNTIPP
    INSTALL_FIELD:    PACKAGE AUTH CACHE
    INSTALL_LOCATION: 4
    VALUE:            0005242880
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           134
    MACRO:            DSN6SPRM
    PARAMETER:        PARA_EFF
    INSTALL_PANEL:    DSNTIP81
    INSTALL_FIELD:    PARALLELISM EFFICIENCY
    INSTALL_LOCATION: 4
    VALUE:            00050
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           135
    MACRO:            DSN6SPRM
    PARAMETER:        PARAMDEG
    INSTALL_PANEL:    DSNTIP81
    INSTALL_FIELD:    MAX DEGREE
    INSTALL_LOCATION: 2
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           136
    MACRO:            DSN6SPRM
    PARAMETER:        STATHIST
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    STATISTICS HISTORY
    INSTALL_LOCATION: 3
    VALUE:            NONE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           137
    MACRO:            DSN6SPRM
    PARAMETER:        RGFNMPRT
    INSTALL_PANEL:    DSNTIPZ
    INSTALL_FIELD:    APPL REGISTRATION TABLE
    INSTALL_LOCATION: 8
    VALUE:            DSN_REGISTER_APPL
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           138
    MACRO:            DSN6SPRM
    PARAMETER:        RGFCOLID
    INSTALL_PANEL:    DSNTIPZ
    INSTALL_FIELD:    REGISTRATION OWNER
    INSTALL_LOCATION: 6
    VALUE:            DSNRGCOL
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           139
    MACRO:            DSN6SPRM
    PARAMETER:        RGFESCP
    INSTALL_PANEL:    DSNTIPZ
    INSTALL_FIELD:    ART-ORT ESCAPE CHAR
    INSTALL_LOCATION: 5
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           140
    MACRO:            DSN6SPRM
    PARAMETER:        RGFINSTL
    INSTALL_PANEL:    DSNTIPZ
    INSTALL_FIELD:    INSTALL DDCTRL SUPT
    INSTALL_LOCATION: 1
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           141
    MACRO:            DSN6SPRM
    PARAMETER:        RGFDEDPL
    INSTALL_PANEL:    DSNTIPZ
    INSTALL_FIELD:    CONTROL ALL APPLICATIONS
    INSTALL_LOCATION: 2
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           142
    MACRO:            DSN6SPRM
    PARAMETER:        RGFFULLQ
    INSTALL_PANEL:    DSNTIPZ
    INSTALL_FIELD:    REQUIRE FULL NAMES
    INSTALL_LOCATION: 3
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           143
    MACRO:            DSN6SPRM
    PARAMETER:        RGFDEFLT
    INSTALL_PANEL:    DSNTIPZ
    INSTALL_FIELD:    UNREGISTERED DDL DEFAULT
    INSTALL_LOCATION: 4
    VALUE:            ACCEPT
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           144
    MACRO:            DSN6SPRM
    PARAMETER:        RGFDBNAM
    INSTALL_PANEL:    DSNTIPZ
    INSTALL_FIELD:    REGISTRATION DATABASE
    INSTALL_LOCATION: 7
    VALUE:            DSNRGFDB
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           145
    MACRO:            DSN6SPRM
    PARAMETER:        RGFNMORT
    INSTALL_PANEL:    DSNTIPZ
    INSTALL_FIELD:    OBJT REGISTRATION TABLE
    INSTALL_LOCATION: 9
    VALUE:            DSN_REGISTER_OBJT
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           146
    MACRO:            DSN6SPRM
    PARAMETER:        MAXRBLK
    INSTALL_PANEL:    DSNTIPC
    INSTALL_FIELD:    RID POOL SIZE
    INSTALL_LOCATION: 9
    VALUE:            0000400000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           147
    MACRO:            DSN6SPRM
    PARAMETER:        MINRBLK
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            0000000001
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           148
    MACRO:            DSN6SPRM
    PARAMETER:        SYSADM
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    SYSTEM ADMIN 1
    INSTALL_LOCATION: 1
    VALUE:            SYSADM
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           149
    MACRO:            DSN6SPRM
    PARAMETER:        SRTPOOL
    INSTALL_PANEL:    DSNTIPC
    INSTALL_FIELD:    SORT POOL SIZE
    INSTALL_LOCATION: 7
    VALUE:            0000010000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           150
    MACRO:            DSN6SPRM
    PARAMETER:        IRLMRWT
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    RESOURCE TIMEOUT
    INSTALL_LOCATION: 3
    VALUE:            0000000030
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           151
    MACRO:            DSN6SPRM
    PARAMETER:        SITETYP
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    SITE TYPE
    INSTALL_LOCATION: 7
    VALUE:            LOCALSITE
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           152
    MACRO:            DSN6SPRM
    PARAMETER:        UTIMOUT
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    UTILITY TIMEOUT
    INSTALL_LOCATION: 5
    VALUE:            00006
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           153
    MACRO:            DSN6SPRM
    PARAMETER:        XLKUPDLT
    INSTALL_PANEL:    DSNTIPI
    INSTALL_FIELD:    X LOCK FOR SEARCHED U OR D
    INSTALL_LOCATION: 8
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           154
    MACRO:            DSN6SPRM
    PARAMETER:        OPTHINTS
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    OPTIMIZATION HINTS
    INSTALL_LOCATION: 3
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           155
    MACRO:            DSN6SPRM
    PARAMETER:        TRKRSITE
    INSTALL_PANEL:    DSNTIPO
    INSTALL_FIELD:    TRACKER SITE
    INSTALL_LOCATION: 8
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           156
    MACRO:            DSN6SPRM
    PARAMETER:        NPGTHRSH
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           157
    MACRO:            DSN6SPRM
    PARAMETER:        SJTABLES
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            00010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           158
    MACRO:            DSN6SPRM
    PARAMETER:        STARJOIN
    INSTALL_PANEL:    DSNTIP81
    INSTALL_FIELD:    STAR JOIN QUERIES
    INSTALL_LOCATION: 5
    VALUE:            DISABLE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           159
    MACRO:            DSN6SPRM
    PARAMETER:        DBACRVW
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    DBADM CREATE AUTH
    INSTALL_LOCATION: 13
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           160
    MACRO:            DSN6SPRM
    PARAMETER:        SUPERRS
    INSTALL_PANEL:    DSNTIPM
    INSTALL_FIELD:    SUPPRESS SOFT ERRORS
    INSTALL_LOCATION: 10
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           161
    MACRO:            DSN6SPRM
    PARAMETER:        STATROLL
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    STATISTICS ROLLUP
    INSTALL_LOCATION: 4
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           162
    MACRO:            DSN6SPRM
    PARAMETER:        EVALUNC
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    EVALUATE UNCOMMITTED
    INSTALL_LOCATION: 4
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           163
    MACRO:            DSN6SPRM
    PARAMETER:        STATSINT
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    REAL TIME STATS
    INSTALL_LOCATION: 11
    VALUE:            00030
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           164
    MACRO:            DSN6SPRM
    PARAMETER:        MINDVSCL
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NONE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           165
    MACRO:            DSN6SPRM
    PARAMETER:        MXTBJOIN
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            00225
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           166
    MACRO:            DSN6SPRM
    PARAMETER:        EDMDBDC
    INSTALL_PANEL:    DSNTIPC
    INSTALL_FIELD:    EDM DBD CACHE
    INSTALL_LOCATION: 3
    VALUE:            0000040960
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           167
    MACRO:            DSN6SPRM
    PARAMETER:        EDMSTMTC
    INSTALL_PANEL:    DSNTIPC
    INSTALL_FIELD:    EDM STATEMENT CACHE
    INSTALL_LOCATION: 2
    VALUE:            0000122880
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           168
    MACRO:            DSN6SPRM
    PARAMETER:        EDM_SKELETON_POOL
    INSTALL_PANEL:    DSNTIPC
    INSTALL_FIELD:    EDM SKELETON POOL SIZE
    INSTALL_LOCATION: 4
    VALUE:            0000081920
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           169
    MACRO:            DSN6SPRM
    PARAMETER:        REFSHAGE
    INSTALL_PANEL:    DSNTIP81
    INSTALL_FIELD:    CURRENT REFRESH AGE
    INSTALL_LOCATION: 7
    VALUE:            0
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           170
    MACRO:            DSN6SPRM
    PARAMETER:        MAINTYPE
    INSTALL_PANEL:    DSNTIP81
    INSTALL_FIELD:    CURRENT MAINT TYPES
    INSTALL_LOCATION: 8
    VALUE:            SYSTEM
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           171
    MACRO:            DSN6SPRM
    PARAMETER:        MAX_OPT_STOR
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            00040
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           172
    MACRO:            DSN6SPRM
    PARAMETER:        MAX_OPT_CPU
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            00100
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           173
    MACRO:            DSN6SPRM
    PARAMETER:        LRDRTHLD
    INSTALL_PANEL:    DSNTIPE1
    INSTALL_FIELD:    LONG-RUNNING READER
    INSTALL_LOCATION: 2
    VALUE:            00010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           174
    MACRO:            DSN6SPRM
    PARAMETER:        VOLTDEVT
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    TEMP DS UNIT NAME
    INSTALL_LOCATION: 1
    VALUE:            SYSDA
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           175
    MACRO:            DSN6SPRM
    PARAMETER:        SKIPUNCI
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    SKIP UNCOMM INSERTS
    INSTALL_LOCATION: 5
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           176
    MACRO:            DSN6SPRM
    PARAMETER:        MXQBCE
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            0000001023
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           177
    MACRO:            DSN6SPRM
    PARAMETER:        PADIX
    INSTALL_PANEL:    DSNTIP71
    INSTALL_FIELD:    PAD INDEXES BY DEFAULT
    INSTALL_LOCATION: 5
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           178
    MACRO:            DSN6SPRM
    PARAMETER:        SMGE
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           179
    MACRO:            DSN6SPRM
    PARAMETER:        SECLCACH
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            00255
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           180
    MACRO:            DSN6SPRM
    PARAMETER:        MXDTCACH
    INSTALL_PANEL:    DSNTIP81
    INSTALL_FIELD:    MAX DATA CACHING
    INSTALL_LOCATION: 6
    VALUE:            00020
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           181
    MACRO:            DSN6SPRM
    PARAMETER:        MAX_NUM_CUR
    INSTALL_PANEL:    DSNTIPX
    INSTALL_FIELD:    MAX OPEN CURSORS
    INSTALL_LOCATION: 6
    VALUE:            0000000500
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           182
    MACRO:            DSN6SPRM
    PARAMETER:        MAX_ST_PROC
    INSTALL_PANEL:    DSNTIPX
    INSTALL_FIELD:    MAX STORED PROCS
    INSTALL_LOCATION: 7
    VALUE:            0000002000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           183
    MACRO:            DSN6SPRM
    PARAMETER:        INLISTP
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            0000000050
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           184
    MACRO:            DSN6SPRM
    PARAMETER:        MAXTEMPS
    INSTALL_PANEL:    DSNTIP91
    INSTALL_FIELD:    MAX TEMP STG\\\\AGENT
    INSTALL_LOCATION: 1
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           185
    MACRO:            DSN6SPRM
    PARAMETER:        WFDBSEP
    INSTALL_PANEL:    DSNTIP91
    INSTALL_FIELD:    SEPARATE WORK FILES
    INSTALL_LOCATION: 2
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           186
    MACRO:            DSN6SPRM
    PARAMETER:        SYSTEM_LEVEL_BACKUPS
    INSTALL_PANEL:    DSNTIP62
    INSTALL_FIELD:    SYSTEM-LEVEL BACKUPS
    INSTALL_LOCATION: 1
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           187
    MACRO:            DSN6SPRM
    PARAMETER:        RESTORE_RECOVER_FROMDUMP
    INSTALL_PANEL:    DSNTIP62
    INSTALL_FIELD:    RESTORE\\\\RECOVER
    INSTALL_LOCATION: 2
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           188
    MACRO:            DSN6SPRM
    PARAMETER:        UTILS_DUMP_CLASS_NAME
    INSTALL_PANEL:    DSNTIP62
    INSTALL_FIELD:    DUMP CLASS NAME
    INSTALL_LOCATION: 3
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           189
    MACRO:            DSN6SPRM
    PARAMETER:        RESTORE_TAPEUNITS
    INSTALL_PANEL:    DSNTIP62
    INSTALL_FIELD:    MAXIMUM TAPE UNITS
    INSTALL_LOCATION: 4
    VALUE:            NOLIMIT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           190
    MACRO:            DSN6SPRM
    PARAMETER:        UTIL_TEMP_STORCLAS
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    UTIL TEMP STORCLAS
    INSTALL_LOCATION: 2
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           191
    MACRO:            DSN6SPRM
    PARAMETER:        OPTXQB
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            ON
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           192
    MACRO:            DSN6SPRM
    PARAMETER:        RPITWC
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           193
    MACRO:            DSN6SPRM
    PARAMETER:        UNION_COLNAME_7
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           194
    MACRO:            DSN6SPRM
    PARAMETER:        COMCRIT
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           195
    MACRO:            DSN6SPRM
    PARAMETER:        IGNSORTN
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    IGNORE SORTNUM STMT
    INSTALL_LOCATION: 6
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           196
    MACRO:            DSN6SPRM
    PARAMETER:        PLANMGMT
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    PLAN MANAGEMENT
    INSTALL_LOCATION: 7
    VALUE:            EXTENDED
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           197
    MACRO:            DSN6SPRM
    PARAMETER:        PLANMGMTSCOPE
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    PLAN MANAGEMENT SCOPE
    INSTALL_LOCATION: 8
    VALUE:            STATIC
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           198
    MACRO:            DSN6SPRM
    PARAMETER:        MORE_UNION_DISTRIBUTION
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            OFF
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           199
    MACRO:            DSN6SPRM
    PARAMETER:        MAX_CONCURRENT_PKG_OPS
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            00010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           200
    MACRO:            DSN6SPRM
    PARAMETER:        ADMTPROC
    INSTALL_PANEL:    DSNTIPX
    INSTALL_FIELD:    ADMIN SCHEDULER
    INSTALL_LOCATION: 9
    VALUE:            DBC1ADMT
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           201
    MACRO:            DSN6SPRM
    PARAMETER:        HONOR_KEEPDICTIONARY
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           202
    MACRO:            DSN6SPRM
    PARAMETER:        CATDDACL
    INSTALL_PANEL:    DSNTIPA2
    INSTALL_FIELD:    DIRECTORY AND CATALOG DATA: DATA CLASS
    INSTALL_LOCATION: 3
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           203
    MACRO:            DSN6SPRM
    PARAMETER:        CATDMGCL
    INSTALL_PANEL:    DSNTIPA2
    INSTALL_FIELD:    DIRECTORY AND CATALOG DATA: MGMT CLASS
    INSTALL_LOCATION: 3
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           204
    MACRO:            DSN6SPRM
    PARAMETER:        CATDSTCL
    INSTALL_PANEL:    DSNTIPA2
    INSTALL_FIELD:    DIRECTORY AND CATALOG DATA: STOR CLASS
    INSTALL_LOCATION: 3
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           205
    MACRO:            DSN6SPRM
    PARAMETER:        CATXDACL
    INSTALL_PANEL:    DSNTIPA2
    INSTALL_FIELD:    DIRECTORY AND CATALOG INDEX: DATA CLASS
    INSTALL_LOCATION: 4
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           206
    MACRO:            DSN6SPRM
    PARAMETER:        CATXMGCL
    INSTALL_PANEL:    DSNTIPA2
    INSTALL_FIELD:    DIRECTORY AND CATALOG INDEX: MGMT CLASS
    INSTALL_LOCATION: 4
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           207
    MACRO:            DSN6SPRM
    PARAMETER:        CATXSTCL
    INSTALL_PANEL:    DSNTIPA2
    INSTALL_FIELD:    DIRECTORY AND CATALOG INDEX: STOR CLASS
    INSTALL_LOCATION: 4
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           208
    MACRO:            DSN6SPRM
    PARAMETER:        ZOSMETRICS
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           209
    MACRO:            DSN6SPRM
    PARAMETER:        FCCOPYDDN
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    DEFAULT TEMPLATE
    INSTALL_LOCATION: 5
    VALUE:            HLQ.&DB..&SN..N&DSNUM..&UQ.
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           210
    MACRO:            DSN6SPRM
    PARAMETER:        FLASHCOPY_COPY
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    COPY
    INSTALL_LOCATION: 6
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           211
    MACRO:            DSN6SPRM
    PARAMETER:        FLASHCOPY_LOAD
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    LOAD
    INSTALL_LOCATION: 7
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           212
    MACRO:            DSN6SPRM
    PARAMETER:        ENCRYPTION_KEYLABEL
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           213
    MACRO:            DSN6SPRM
    PARAMETER:        FLASHCOPY_REORG_TS
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    REORG TABLESPACE
    INSTALL_LOCATION: 8
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           214
    MACRO:            DSN6SPRM
    PARAMETER:        FLASHCOPY_REBUILD_INDEX
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    REBUILD INDEX
    INSTALL_LOCATION: 9
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           215
    MACRO:            DSN6SPRM
    PARAMETER:        FLASHCOPY_REORG_INDEX
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    REORG INDEX
    INSTALL_LOCATION: 10
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           216
    MACRO:            DSN6SPRM
    PARAMETER:        SECADM1
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    SECURITY ADMIN 1
    INSTALL_LOCATION: 5
    VALUE:            IBMUSER
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           217
    MACRO:            DSN6SPRM
    PARAMETER:        SECADM1_TYPE
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    SEC ADMIN 1 TYPE
    INSTALL_LOCATION: 6
    VALUE:            AUTHID
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           218
    MACRO:            DSN6SPRM
    PARAMETER:        SECADM1_INPUT_STYLE
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            CHAR
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           219
    MACRO:            DSN6SPRM
    PARAMETER:        SECADM2
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    SECURITY ADMIN 2
    INSTALL_LOCATION: 7
    VALUE:            SYSADM
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           220
    MACRO:            DSN6SPRM
    PARAMETER:        SECADM2_TYPE
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    SEC ADMIN 2 TYPE
    INSTALL_LOCATION: 8
    VALUE:            AUTHID
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           221
    MACRO:            DSN6SPRM
    PARAMETER:        SECADM2_INPUT_STYLE
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            CHAR
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           222
    MACRO:            DSN6SPRM
    PARAMETER:        SEPARATE_SECURITY
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    SEPARATE SECURITY
    INSTALL_LOCATION: 9
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           223
    MACRO:            DSN6SPRM
    PARAMETER:        REVOKE_DEP_PRIVILEGES
    INSTALL_PANEL:    DSNTIPP1
    INSTALL_FIELD:    REVOKE DEP PRIV
    INSTALL_LOCATION: 14
    VALUE:            SQLSTMT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           224
    MACRO:            DSN6SPRM
    PARAMETER:        EN_PJSJ
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            OFF
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           225
    MACRO:            DSN6SPRM
    PARAMETER:        MAXTEMPS_RID
    INSTALL_PANEL:    DSNTIP91
    INSTALL_FIELD:    MAX TEMP RID
    INSTALL_LOCATION: 3
    VALUE:            NOLIMIT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           226
    MACRO:            DSN6SPRM
    PARAMETER:        CHECK_FASTREPLICATION
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            REQUIRED
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           227
    MACRO:            DSN6SPRM
    PARAMETER:        REC_FASTREPLICATION
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    FAST RESTORE
    INSTALL_LOCATION: 1
    VALUE:            PREFERRED
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           228
    MACRO:            DSN6SPRM
    PARAMETER:        FLASHCOPY_PPRC
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    FLASHCOPY PPRC
    INSTALL_LOCATION: 3
    VALUE:            REQUIRED
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           229
    MACRO:            DSN6SPRM
    PARAMETER:        BIF_COMPATIBILITY
    INSTALL_PANEL:    DSNTIPX
    INSTALL_FIELD:    BIF COMPATIBILITY
    INSTALL_LOCATION: 8
    VALUE:            CURRENT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           230
    MACRO:            DSN6SPRM
    PARAMETER:        SIMULATED_CPU_COUNT
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            OFF
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           231
    MACRO:            DSN6SPRM
    PARAMETER:        SIMULATED_CPU_SPEED
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            OFF
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           232
    MACRO:            DSN6SPRM
    PARAMETER:        REALSTORAGE_MAX
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NOLIMIT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           233
    MACRO:            DSN6SPRM
    PARAMETER:        REALSTORAGE_MANAGEMENT
    INSTALL_PANEL:    DSNTIPE1
    INSTALL_FIELD:    MANAGE REAL STORAGE
    INSTALL_LOCATION: 1
    VALUE:            AUTO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           234
    MACRO:            DSN6SPRM
    PARAMETER:        DDLTOX
    INSTALL_PANEL:    DSNTIPE1
    INSTALL_FIELD:    DATA DEF TIMEOUT
    INSTALL_LOCATION: 3
    VALUE:            00001
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           235
    MACRO:            DSN6SPRM
    PARAMETER:        DISABLE_EDMRTS
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    DISABLE EDMRTS
    INSTALL_LOCATION: 12
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           236
    MACRO:            DSN6SPRM
    PARAMETER:        REORG_PART_SORT_NPSI
    INSTALL_PANEL:    DSNTIP63
    INSTALL_FIELD:    REORG PART SORT NPSI
    INSTALL_LOCATION: 1
    VALUE:            AUTO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           237
    MACRO:            DSN6SPRM
    PARAMETER:        REORG_MAPPING_DATABASE
    INSTALL_PANEL:    DSNTIP63
    INSTALL_FIELD:    REORG MAPPING DB
    INSTALL_LOCATION: 3
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           238
    MACRO:            DSN6SPRM
    PARAMETER:        IX_TB_PART_CONV_EXCLUDE
    INSTALL_PANEL:    DSNTIP72
    INSTALL_FIELD:    EXCLUDE PART KEY COLUMNS
    INSTALL_LOCATION: 4
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           239
    MACRO:            DSN6SPRM
    PARAMETER:        REORG_LIST_PROCESSING
    INSTALL_PANEL:    DSNTIP63
    INSTALL_FIELD:    REORG LIST PROCESSING
    INSTALL_LOCATION: 2
    VALUE:            PARALLEL
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           240
    MACRO:            DSN6SPRM
    PARAMETER:        RESTRICT_ALT_COL_FOR_DCC
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           241
    MACRO:            DSN6SPRM
    PARAMETER:        AUTHEXIT_CHECK
    INSTALL_PANEL:    DSNTIPP
    INSTALL_FIELD:    AUTH EXIT CHECK
    INSTALL_LOCATION: 7
    VALUE:            PRIMARY
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           242
    MACRO:            DSN6SPRM
    PARAMETER:        AUTHEXIT_CACHEREFRESH
    INSTALL_PANEL:    DSNTIPP
    INSTALL_FIELD:    AUTH EXIT CACHE REFR
    INSTALL_LOCATION: 8
    VALUE:            NONE
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           243
    MACRO:            DSN6SPRM
    PARAMETER:        PKGREL_COMMIT
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    PACKAGE RELEASE COMMIT
    INSTALL_LOCATION: 9
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           244
    MACRO:            DSN6SPRM
    PARAMETER:        REORG_DROP_PBG_PARTS
    INSTALL_PANEL:    DSNTIP63
    INSTALL_FIELD:    REORG DROP PBG PARTS
    INSTALL_LOCATION: 4
    VALUE:            DISABLE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           245
    MACRO:            DSN6SPRM
    PARAMETER:        REORG_TS_NOPAD_DEFAULT
    INSTALL_PANEL:    DSNTIP63
    INSTALL_FIELD:    REORG TS NOPAD DEFAULT
    INSTALL_LOCATION: 5
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           246
    MACRO:            DSN6SPRM
    PARAMETER:        MAXSORT_IN_MEMORY
    INSTALL_PANEL:    DSNTIPC
    INSTALL_FIELD:    MAX IN-MEMORY SORT SIZE
    INSTALL_LOCATION: 8
    VALUE:            0000001000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           247
    MACRO:            DSN6SPRM
    PARAMETER:        APPLCOMPAT
    INSTALL_PANEL:    DSNTIP00
    INSTALL_FIELD:    APPL COMPAT LEVEL
    INSTALL_LOCATION: 3
    VALUE:            V12R1
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           248
    MACRO:            DSN6SPRM
    PARAMETER:        INDEX_CLEANUP_THREADS
    INSTALL_PANEL:    DSNTIPE1
    INSTALL_FIELD:    INDEX CLEANUP THREADS
    INSTALL_LOCATION: 4
    VALUE:            00010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           249
    MACRO:            DSN6SPRM
    PARAMETER:        PARAMDEG_DPSI
    INSTALL_PANEL:    DSNTIP81
    INSTALL_FIELD:    MAX DEGREE FOR DPSI
    INSTALL_LOCATION: 3
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           250
    MACRO:            DSN6SPRM
    PARAMETER:        OPT1ROWBLOCKSORT
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            DISABLE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           251
    MACRO:            DSN6SPRM
    PARAMETER:        ACCEL
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           252
    MACRO:            DSN6SPRM
    PARAMETER:        QUERY_ACCELERATION
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NONE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           253
    MACRO:            DSN6SPRM
    PARAMETER:        QUERY_ACCEL_OPTIONS
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NONE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           254
    MACRO:            DSN6SPRM
    PARAMETER:        GET_ACCEL_ARCHIVE
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           255
    MACRO:            DSN6SPRM
    PARAMETER:        TEMPLATE_TIME
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    TEMPLATE TIME
    INSTALL_LOCATION: 7
    VALUE:            UTC
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           256
    MACRO:            DSN6SPRM
    PARAMETER:        SUBQ_MIDX
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            ENABLE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           257
    MACRO:            DSN6SPRM
    PARAMETER:        PARAMDEG_UTIL
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    MAX UTILS PARALLELISM
    INSTALL_LOCATION: 8
    VALUE:            00099
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           258
    MACRO:            DSN6SPRM
    PARAMETER:        WFSTGUSE_AGENT_THRESHOLD
    INSTALL_PANEL:    DSNTIP91
    INSTALL_FIELD:    AGENT LEVEL THRESHOLD
    INSTALL_LOCATION: 4
    VALUE:            00000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           259
    MACRO:            DSN6SPRM
    PARAMETER:        WFSTGUSE_SYSTEM_THRESHOLD
    INSTALL_PANEL:    DSNTIP91
    INSTALL_FIELD:    SYSTEM LEVEL THRESHOLD
    INSTALL_LOCATION: 5
    VALUE:            00090
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           260
    MACRO:            DSN6SPRM
    PARAMETER:        LIKE_BLANK_INSIGNIFICANT
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           261
    MACRO:            DSN6SPRM
    PARAMETER:        PCTFREE_UPD
    INSTALL_PANEL:    DSNTIP71
    INSTALL_FIELD:    PERCENT FREE FOR UPDATE
    INSTALL_LOCATION: 2
    VALUE:            00000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           262
    MACRO:            DSN6SPRM
    PARAMETER:        STATFDBK_SCOPE
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    STATISTICS FEEDBACK
    INSTALL_LOCATION: 13
    VALUE:            ALL
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           263
    MACRO:            DSN6SPRM
    PARAMETER:        XML_RESTRICT_EMPTY_TAG
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           264
    MACRO:            DSN6SPRM
    PARAMETER:        PREVENT_ALTERTB_LIMITKEY
    INSTALL_PANEL:    DSNTIP72
    INSTALL_FIELD:    PREVENT ALTER LIMITKEY
    INSTALL_LOCATION: 3
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           265
    MACRO:            DSN6SPRM
    PARAMETER:        PREVENT_NEW_IXCTRL_PART
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           266
    MACRO:            DSN6SPRM
    PARAMETER:        ACCELMODEL
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           267
    MACRO:            DSN6SPRM
    PARAMETER:        PAGESET_PAGENUM
    INSTALL_PANEL:    DSNTIP71
    INSTALL_FIELD:    PAGE SET PAGE NUMBERING
    INSTALL_LOCATION: 3
    VALUE:            ABSOLUTE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           268
    MACRO:            DSN6SPRM
    PARAMETER:        SUPPRESS_HINT_SQLCODE_DYN
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           269
    MACRO:            DSN6SPRM
    PARAMETER:        ALTERNATE_CP
    INSTALL_PANEL:    DSNTIP62
    INSTALL_FIELD:    ALTERNATE COPY POOL
    INSTALL_LOCATION: 5
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           270
    MACRO:            DSN6SPRM
    PARAMETER:        UTIL_DBBSG
    INSTALL_PANEL:    DSNTIP62
    INSTALL_FIELD:    DB BACKUP STG GROUP
    INSTALL_LOCATION: 6
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           271
    MACRO:            DSN6SPRM
    PARAMETER:        UTIL_LGBSG
    INSTALL_PANEL:    DSNTIP62
    INSTALL_FIELD:    LOG BACKUP STG GRP
    INSTALL_LOCATION: 7
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           272
    MACRO:            DSN6SPRM
    PARAMETER:        COPY_FASTREPLICATION
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    COPY FAST REPLICATION
    INSTALL_LOCATION: 2
    VALUE:            PREFERRED
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           273
    MACRO:            DSN6SPRM
    PARAMETER:        RENAMETABLE
    INSTALL_PANEL:    DSNTIP72
    INSTALL_FIELD:    RENAME TABLE
    INSTALL_LOCATION: 5
    VALUE:            DISALLOW_DEP_VIEW_SQLTUDF
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           274
    MACRO:            DSN6SPRM
    PARAMETER:        RETRY_STOPPED_OBJECTS
    INSTALL_PANEL:    DSNTIP71
    INSTALL_FIELD:    RETRY STOPPED OBJECTS
    INSTALL_LOCATION: 4
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           275
    MACRO:            DSN6SPRM
    PARAMETER:        UTILS_HSM_MSGDS_HLQ
    INSTALL_PANEL:    DSNTIP62
    INSTALL_FIELD:    HSM MESSAGE DS HLQ
    INSTALL_LOCATION: 8
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           276
    MACRO:            DSN6SPRM
    PARAMETER:        DEFAULT_INSERT_ALGORITHM
    INSTALL_PANEL:    DSNTIP71
    INSTALL_FIELD:    DEFAULT INSERT ALGORITHM
    INSTALL_LOCATION: 8
    VALUE:            00002
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           277
    MACRO:            DSN6SPRM
    PARAMETER:        STATFDBK_PROFILE
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    STATS PROFILE FEEDBACK
    INSTALL_LOCATION: 14
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           278
    MACRO:            DSN6SPRM
    PARAMETER:        AUTH_COMPATIBILITY
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NULL
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           279
    MACRO:            DSN6SPRM
    PARAMETER:        CACHEDYN_STABILIZATION
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    CACHE DYN STABILITY
    INSTALL_LOCATION: 2
    VALUE:            BOTH
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           280
    MACRO:            DSN6SPRM
    PARAMETER:        ZHYPERLINK
    INSTALL_PANEL:    DSNTIPA3
    INSTALL_FIELD:    DB2 zHyperLinks SCOPE
    INSTALL_LOCATION: 3
    VALUE:            DISABLE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           281
    MACRO:            DSN6SPRM
    PARAMETER:        DDL_MATERIALIZATION
    INSTALL_PANEL:    DSNTIP71
    INSTALL_FIELD:    DDL MATERIALIZATION
    INSTALL_LOCATION: 7
    VALUE:            ALWAYS_IMMEDIATE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           282
    MACRO:            DSN6SPRM
    PARAMETER:        COMPRESS_DIRLOB
    INSTALL_PANEL:    DSNTIPA2
    INSTALL_FIELD:    COMPRESS DB2 DIR LOBS
    INSTALL_LOCATION: 5
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           283
    MACRO:            DSN6SPRM
    PARAMETER:        INDEX_MEMORY_CONTROL
    INSTALL_PANEL:    DSNTIP71
    INSTALL_FIELD:    INDEX MEMORY CONTROL
    INSTALL_LOCATION: 6
    VALUE:            AUTO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           284
    MACRO:            DSN6SPRM
    PARAMETER:        MATERIALIZE_NODET_SQLTUDF
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           285
    MACRO:            DSN6SPRM
    PARAMETER:        MOVE_TO_ARCHIVE_DEFAULT
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            N
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           286
    MACRO:            DSN6SPRM
    PARAMETER:        DISALLOW_SEL_INTO_UNION
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           287
    MACRO:            DSN6SPRM
    PARAMETER:        FLASHCOPY_XRCP
    INSTALL_PANEL:    DSNTIP61
    INSTALL_FIELD:    FLASHCOPY XRCP
    INSTALL_LOCATION: 4
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           288
    MACRO:            DSN6SPRM
    PARAMETER:        STATCLGSRT
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    STATISTICS COLGROUP DATA SORT STG LIMIT
    INSTALL_LOCATION: 9
    VALUE:            0000000010
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           289
    MACRO:            DSN6SPRM
    PARAMETER:        STATPGSAMP
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    PAGE-LEVEL SAMPLING
    INSTALL_LOCATION: 10
    VALUE:            SYSTEM
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           290
    MACRO:            DSN6SPRM
    PARAMETER:        QUERY_ACCEL_WAITFORDATA
    INSTALL_PANEL:    DSNTIP82
    INSTALL_FIELD:    WAIT FOR DATA
    INSTALL_LOCATION: 5
    VALUE:            0.0
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           291
    MACRO:            DSN6SPRM
    PARAMETER:        TS_COMPRESSION_TYPE
    INSTALL_PANEL:    DSNTIP7
    INSTALL_FIELD:    TS COMPRESSION TYPE
    INSTALL_LOCATION: 5
    VALUE:            FIXED_LENGTH
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           292
    MACRO:            DSN6SPRM
    PARAMETER:        DISALLOW_SSARAUTH
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           293
    MACRO:            DSN6SPRM
    PARAMETER:        UTILS_BLOCK_FOR_CDC
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    UTILS BLOCK FOR CDC
    INSTALL_LOCATION: 11
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           294
    MACRO:            DSN6SPRM
    PARAMETER:        MFA_AUTHCACHE_UNUSED_TIME
    INSTALL_PANEL:    DSNTIPP
    INSTALL_FIELD:    MFA AUTH UNUSED TIME
    INSTALL_LOCATION: 9
    VALUE:            0000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           295
    MACRO:            DSN6SPRM
    PARAMETER:        LOAD_RO_OBJECTS
    INSTALL_PANEL:    DSNTIP6
    INSTALL_FIELD:    LOAD RO OBJECTS
    INSTALL_LOCATION: 12
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           296
    MACRO:            DSN6SPRM
    PARAMETER:        ALLOW_UPD_DEL_INS_WITH_UR
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           297
    MACRO:            DSN6SPRM
    PARAMETER:        UTILS_USE_ZSORT
    INSTALL_PANEL:    DSNTIP63
    INSTALL_FIELD:    UTILS USE ZSORT
    INSTALL_LOCATION: 6
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           298
    MACRO:            DSN6SPRM
    PARAMETER:        CATALOG
    INSTALL_PANEL:    DSNTIPA2
    INSTALL_FIELD:    CATALOG ALIAS
    INSTALL_LOCATION: 1
    VALUE:            DSN121
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           299
    MACRO:            DSN6SPRM
    PARAMETER:        RESTART DEF
    INSTALL_PANEL:    DSNTIPS
    INSTALL_FIELD:    RESTART OR DEFER
    INSTALL_LOCATION: 1
    VALUE:            RESTART
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           300
    MACRO:            DSN6SPRM
    PARAMETER:        ALL-DBNAME
    INSTALL_PANEL:    DSNTIPS
    INSTALL_FIELD:    DBSTARTX
    INSTALL_LOCATION: 2-37
    VALUE:            ALL
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           301
    MACRO:            DSN6FAC
    PARAMETER:        CMTSTAT
    INSTALL_PANEL:    DSNTIP5
    INSTALL_FIELD:    DDF THREADS
    INSTALL_LOCATION: 1
    VALUE:            INACTIVE
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           302
    MACRO:            DSN6FAC
    PARAMETER:        TCPALVER
    INSTALL_PANEL:    DSNTIP5
    INSTALL_FIELD:    TCP IP ALREADY VERIFIED
    INSTALL_LOCATION: 5
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           303
    MACRO:            DSN6FAC
    PARAMETER:        RESYNC
    INSTALL_PANEL:    DSNTIPR
    INSTALL_FIELD:    RESYNC INTERVAL
    INSTALL_LOCATION: 10
    VALUE:            00002
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           304
    MACRO:            DSN6FAC
    PARAMETER:        RLFERRD
    INSTALL_PANEL:    DSNTIPO4
    INSTALL_FIELD:    REMOTE DYNAMIC SQL
    INSTALL_LOCATION: 6
    VALUE:            NOLIMIT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           305
    MACRO:            DSN6FAC
    PARAMETER:        RLFERRDSTC
    INSTALL_PANEL:    DSNTIPO4
    INSTALL_FIELD:    REMOTE STATIC SQL
    INSTALL_LOCATION: 7
    VALUE:            NOLIMIT
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           306
    MACRO:            DSN6FAC
    PARAMETER:        DDF
    INSTALL_PANEL:    DSNTIPR
    INSTALL_FIELD:    DDF STARTUP OPTION
    INSTALL_LOCATION: 1
    VALUE:            AUTO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           307
    MACRO:            DSN6FAC
    PARAMETER:        IDTHTOIN
    INSTALL_PANEL:    DSNTIP5
    INSTALL_FIELD:    IDLE THREAD TIMEOUT
    INSTALL_LOCATION: 3
    VALUE:            00120
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           308
    MACRO:            DSN6FAC
    PARAMETER:        MAXTYPE1
    INSTALL_PANEL:    DSNTIP5
    INSTALL_FIELD:    MAX INACTIVE DBATS
    INSTALL_LOCATION: 2
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           309
    MACRO:            DSN6FAC
    PARAMETER:        TCPKPALV
    INSTALL_PANEL:    DSNTIP5
    INSTALL_FIELD:    TCPIP KEEPALIVE
    INSTALL_LOCATION: 8
    VALUE:            00120
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           310
    MACRO:            DSN6FAC
    PARAMETER:        POOLINAC
    INSTALL_PANEL:    DSNTIP5
    INSTALL_FIELD:    POOL THREAD TIMEOUT
    INSTALL_LOCATION: 9
    VALUE:            00120
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           311
    MACRO:            DSN6FAC
    PARAMETER:        SQLINTRP
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            ENABLE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           312
    MACRO:            DSN6FAC
    PARAMETER:        PRIVATE_PROTOCOL
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           313
    MACRO:            DSN6FAC
    PARAMETER:        MAXCONQN
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            OFF
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           314
    MACRO:            DSN6FAC
    PARAMETER:        MAXCONQW
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            OFF
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           315
    MACRO:            DSN6FAC
    PARAMETER:        DDF_COMPATIBILITY
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NULL
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           316
    MACRO:            DSN6GRP
    PARAMETER:        IMMEDWRI
    INSTALL_PANEL:    DSNTIP8
    INSTALL_FIELD:    IMMEDIATE WRITE
    INSTALL_LOCATION: 6
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           317
    MACRO:            DSN6GRP
    PARAMETER:        DSHARE
    INSTALL_PANEL:    DSNTIPA1
    INSTALL_FIELD:    DATA SHARING FUNCTION
    INSTALL_LOCATION: 2
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           318
    MACRO:            DSN6GRP
    PARAMETER:        MEMBNAME
    INSTALL_PANEL:    DSNTIPK
    INSTALL_FIELD:    MEMBER NAME
    INSTALL_LOCATION: 2
    VALUE:            DSN1
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           319
    MACRO:            DSN6GRP
    PARAMETER:        GRPNAME
    INSTALL_PANEL:    DSNTIPK
    INSTALL_FIELD:    GROUP NAME
    INSTALL_LOCATION: 1
    VALUE:            DSNCAT
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           320
    MACRO:            DSN6GRP
    PARAMETER:        RANDOMATT
    INSTALL_PANEL:    DSNTIPK
    INSTALL_FIELD:    RANDOM ATTACH
    INSTALL_LOCATION: 6
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           321
    MACRO:            DSN6GRP
    PARAMETER:        PEER_RECOVERY
    INSTALL_PANEL:    DSNTIPK
    INSTALL_FIELD:    PEER RECOVERY
    INSTALL_LOCATION: 8
    VALUE:            NONE
    ADDITIONAL_INFO:  ONLINE=Y
  - 
    ROWNUM:           322
    MACRO:            DSNHDECP
    PARAMETER:        DB2SUPLD
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           323
    MACRO:            DSNHDECP
    PARAMETER:        DEFLANG
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    LANGUAGE DEFAULT
    INSTALL_LOCATION: 1
    VALUE:            IBMCOB
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           324
    MACRO:            DSNHDECP
    PARAMETER:        DECIMAL
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    DECIMAL POINT IS
    INSTALL_LOCATION: 2
    VALUE:            PERIOD
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           325
    MACRO:            DSNHDECP
    PARAMETER:        DELIM
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    STRING DELIMITER
    INSTALL_LOCATION: 3
    VALUE:            DEFAULT
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           326
    MACRO:            DSNHDECP
    PARAMETER:        SQLDELI
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    SQL STRING DELIMITER
    INSTALL_LOCATION: 4
    VALUE:            DEFAULT
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           327
    MACRO:            DSNHDECP
    PARAMETER:        DSQLDELI
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    DIST SQL STR DELIMITER
    INSTALL_LOCATION: 5
    VALUE:            APOST
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           328
    MACRO:            DSNHDECP
    PARAMETER:        MIXED
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    MIXED DATA
    INSTALL_LOCATION: 6
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           329
    MACRO:            DSNHDECP
    PARAMETER:        SCCSID
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    EBCDIC CCSID
    INSTALL_LOCATION: 7
    VALUE:            00037
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           330
    MACRO:            DSNHDECP
    PARAMETER:        MCCSID
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    EBCDIC CCSID
    INSTALL_LOCATION: 7
    VALUE:            65534
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           331
    MACRO:            DSNHDECP
    PARAMETER:        GCCSID
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    EBCDIC CCSID
    INSTALL_LOCATION: 7
    VALUE:            65534
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           332
    MACRO:            DSNHDECP
    PARAMETER:        ASCCSID
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    ASCII CCSID
    INSTALL_LOCATION: 8
    VALUE:            01252
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           333
    MACRO:            DSNHDECP
    PARAMETER:        AMCCSID
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    ASCII CCSID
    INSTALL_LOCATION: 8
    VALUE:            65534
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           334
    MACRO:            DSNHDECP
    PARAMETER:        AGCCSID
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    ASCII CCSID
    INSTALL_LOCATION: 8
    VALUE:            65534
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           335
    MACRO:            DSNHDECP
    PARAMETER:        USCCSID
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    UNICODE CCSID
    INSTALL_LOCATION: 9
    VALUE:            00367
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           336
    MACRO:            DSNHDECP
    PARAMETER:        UMCCSID
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    UNICODE CCSID
    INSTALL_LOCATION: 9
    VALUE:            01208
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           337
    MACRO:            DSNHDECP
    PARAMETER:        UGCCSID
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    UNICODE CCSID
    INSTALL_LOCATION: 9
    VALUE:            01200
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           338
    MACRO:            DSNHDECP
    PARAMETER:        ENSCHEME
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    DEF ENCODING SCHEME
    INSTALL_LOCATION: 10
    VALUE:            EBCDIC
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           339
    MACRO:            DSNHDECP
    PARAMETER:        APPENSCH
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    APPLICATION ENCODING
    INSTALL_LOCATION: 11
    VALUE:            EBCDIC
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           340
    MACRO:            DSNHDECP
    PARAMETER:        DECARTH
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    DECIMAL ARITHMETIC
    INSTALL_LOCATION: 2
    VALUE:            DEC15
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           341
    MACRO:            DSNHDECP
    PARAMETER:        DYNRULS
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    USE FOR DYNAMICRULES
    INSTALL_LOCATION: 3
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           342
    MACRO:            DSNHDECP
    PARAMETER:        DATE
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    DATE FORMAT
    INSTALL_LOCATION: 5
    VALUE:            ISO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           343
    MACRO:            DSNHDECP
    PARAMETER:        TIME
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    TIME FORMAT
    INSTALL_LOCATION: 6
    VALUE:            ISO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           344
    MACRO:            DSNHDECP
    PARAMETER:        DATELEN
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    LOCAL DATE LENGTH
    INSTALL_LOCATION: 7
    VALUE:            000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           345
    MACRO:            DSNHDECP
    PARAMETER:        TIMELEN
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    LOCAL TIME LENGTH
    INSTALL_LOCATION: 8
    VALUE:            000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           346
    MACRO:            DSNHDECP
    PARAMETER:        IMPLICIT_TIMEZONE
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    IMPLICIT TIME ZONE
    INSTALL_LOCATION: 9
    VALUE:            CURRENT
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           347
    MACRO:            DSNHDECP
    PARAMETER:        STDSQL
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    STD SQL LANGUAGE
    INSTALL_LOCATION: 10
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           348
    MACRO:            DSNHDECP
    PARAMETER:        PADNTSTR
    INSTALL_PANEL:    DSNTIP4
    INSTALL_FIELD:    PAD NUL-TERMINATED
    INSTALL_LOCATION: 11
    VALUE:            NO
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           349
    MACRO:            DSNHDECP
    PARAMETER:        SSID
    INSTALL_PANEL:    DSNTIPM
    INSTALL_FIELD:    SUBSYSTEM NAME
    INSTALL_LOCATION: 1
    VALUE:            DBC1
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           350
    MACRO:            DSNHDECP
    PARAMETER:        LC_CTYPE
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    LOCALE LC_CTYPE
    INSTALL_LOCATION: 12
    VALUE:            
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           351
    MACRO:            DSNHDECP
    PARAMETER:        DEF_DECFLOAT_ROUND_MODE
    INSTALL_PANEL:    DSNTIPF
    INSTALL_FIELD:    DECFLOAT ROUNDING MODE
    INSTALL_LOCATION: 13
    VALUE:            ROUND_HALF_EVEN
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           352
    MACRO:            DSNHDECP
    PARAMETER:        SQLLEVEL
    INSTALL_PANEL:    DSNTIP00
    INSTALL_FIELD:    PRECOMPILER SQL LEVEL
    INSTALL_LOCATION: 4
    VALUE:            V12R1M500
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           353
    MACRO:            DBC1IRLM
    PARAMETER:        PC SPECIFIED
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            YES
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           354
    MACRO:            DBC1IRLM
    PARAMETER:        WAIT TIME FOR LOCAL DEADLOCK
    INSTALL_PANEL:    DSNTIPJ
    INSTALL_FIELD:    DEADLOCK TIME
    INSTALL_LOCATION: 5
    VALUE:            01000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           355
    MACRO:            DBC1IRLM
    PARAMETER:        LOCAL CYCLES PER GLOBAL CYCLE
    INSTALL_PANEL:    DSNTIPJ
    INSTALL_FIELD:    DEADLOCK CYCLE
    INSTALL_LOCATION: 6
    VALUE:            00001
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           356
    MACRO:            DBC1IRLM
    PARAMETER:        TIMEOUT INTERVAL
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            0000000030
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           357
    MACRO:            DBC1IRLM
    PARAMETER:        IRLM MAXIMUM CSA USAGE ALLOWED
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           358
    MACRO:            DBC1IRLM
    PARAMETER:        SYSTEM LOCK TABLE HASH ENTRIES
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           359
    MACRO:            DBC1IRLM
    PARAMETER:        PENDING NUMBER OF HASH ENTRIES
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=N
  - 
    ROWNUM:           360
    MACRO:            DBC1IRLM
    PARAMETER:        SYSTEM LOCK TABLE LIST ENTRIES
    INSTALL_PANEL:    
    INSTALL_FIELD:    
    INSTALL_LOCATION: 
    VALUE:            0000000000
    ADDITIONAL_INFO:  ONLINE=N


"
`;

exports[`Test Connection should be able to execute simple SQL statements to test connection 1`] = `
"Result #1
- 
  IBMREQD: Y


"
`;

exports[`Test Connection should be able to execute simple SQL statements with the -q alias 1`] = `
"Result #1
- 
  TOTAL: 1


"
`;

exports[`Test Connection should be able to export a table so stdout with semi-colon separator 1`] = `
"INSERT INTO SYSIBM.SYSDUMMY1(IBMREQD)
VALUES('Y')
;
"
`;
